Ajuste meses retroactivo

--- a/index.html
+++ b/index.html
@@ -492,11 +492,13 @@
                         <div class="col-md-8 col-12">
                             <div class="card">
                                 <div class="card-body">
-                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">¿Sugerencias?
-                                        &nbsp;</span>
-                                    <a class="btn btn-success" href="index2.html" id=""
-                                        style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
-                                </div>
+                                        <span style="font-size: 24px;color: #3348fd;font-weight: 500; text-align: center; width: 100%;display: block;">¿Sugerencias?
+                                            &nbsp;</span>
+                                        <!--<a class="btn btn-success" href="index2.html" id=""
+                                            style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>-->
+                                        <a class="btn btn-circle btn-secondary" href="https://wa.me/573105678707" style="background: #1bd741; border-color: #1bd741; font-size: 18px; width:100%">WhatsApp &nbsp;&nbsp;<i class="fab fa-whatsapp"></i></a>
+
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -575,11 +577,13 @@
                         <div class="col-md-10 col-12">
                             <div class="card">
                                 <div class="card-body">
-                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">¿Sugerencias?
-                                        &nbsp;</span>
-                                    <a class="btn btn-success" href="index2.html" id=""
-                                        style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
-                                </div>
+                                        <span style="font-size: 24px;color: #3348fd;font-weight: 500; text-align: center; width: 100%;display: block;">¿Sugerencias?
+                                            &nbsp;</span>
+                                        <!--<a class="btn btn-success" href="index2.html" id=""
+                                            style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>-->
+                                        <a class="btn btn-circle btn-secondary" href="https://wa.me/573105678707" style="background: #1bd741; border-color: #1bd741; font-size: 18px; width:100%">WhatsApp &nbsp;&nbsp;<i class="fab fa-whatsapp"></i></a>
+
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -641,15 +645,17 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <!--<div class="card-body" id="mostrarInfoPar" style="display: none;">
-                                        <h4 class="efectoBlink"
-                                            style="color: red; text-align: center; font-weight: 600;">((( Importante )))
+                                    <div class="card-body" id="mostrarInfoPar" style="display: none;">
+                                        <h4 class="efectoBlink" style="color: red; text-align: center; font-weight: 600;">
+                                            ((( Importante )))
                                         </h4>
-                                         <p style="text-align: justify; color: red;">Tenga en cuenta que si los meses de
-                                            pago de su bonificación de asistencia familiar fueron impares (enero), es posible que a su retroactivo se le adicionen <b
-                                                id="retroAsis"></b>, correspondientes al aumento de esta bonificación
-                                            del mes de mayo.</p>
-                                    </div>-->
+
+                                         <p style="text-align: justify; color: red;">
+                                            Tenga en cuenta que se cuentan 6 meses de retroactivo siempre y cuando el salario del mes de junio llegue sin aumento; en caso contrario, 
+                                            llegarían solo 5 meses de retroactivo, afectando también el valor final por concepto de bonificación de asistencia familiar, 
+                                            la cual, para algunos llegó en enero, marzo y mayo (3 meses) o febrero y abril (2 meses).
+                                        </p>
+                                        </div>
 
                                     <div class="card-footer">
                                         <div>
@@ -663,11 +669,13 @@
                         <div class="col-md-8 col-12">
                             <div class="card">
                                 <div class="card-body">
-                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">Alguna
-                                        sugerencia? &nbsp;&nbsp;</span>
-                                    <a class="btn btn-success" href="index2.html" id=""
-                                        style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
-                                </div>
+                                        <span style="font-size: 24px;color: #3348fd;font-weight: 500; text-align: center; width: 100%;display: block;">¿Sugerencias?
+                                            &nbsp;</span>
+                                        <!--<a class="btn btn-success" href="index2.html" id=""
+                                            style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>-->
+                                        <a class="btn btn-circle btn-secondary" href="https://wa.me/573105678707" style="background: #1bd741; border-color: #1bd741; font-size: 18px; width:100%">WhatsApp &nbsp;&nbsp;<i class="fab fa-whatsapp"></i></a>
+
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -861,11 +869,13 @@
                         <div class="col-md-8 col-12">
                             <div class="card">
                                 <div class="card-body">
-                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">Alguna
-                                        sugerencia? &nbsp;&nbsp;</span>
-                                    <a class="btn btn-success" href="index2.html" id=""
-                                        style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
-                                </div>
+                                        <span style="font-size: 24px;color: #3348fd;font-weight: 500; text-align: center; width: 100%;display: block;">¿Sugerencias?
+                                            &nbsp;</span>
+                                        <!--<a class="btn btn-success" href="index2.html" id=""
+                                            style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>-->
+                                        <a class="btn btn-circle btn-secondary" href="https://wa.me/573105678707" style="background: #1bd741; border-color: #1bd741; font-size: 18px; width:100%">WhatsApp &nbsp;&nbsp;<i class="fab fa-whatsapp"></i></a>
+
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -989,7 +999,7 @@
     <!-- AdminLTE App -->
     <script src="resources/dist/js/adminlte.js"></script>
     <script src="resources/plugins/sweetalert2/sweetalert2.all.min.js"></script>
-    <script src="CalculoValores.js?v=22"></script>
+    <script src="CalculoValores.js?v=24"></script>
 </body>
 
 </html>
