Ajuste meses retro

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                         <div class="col-md-8 col-12">
                             <div class="card card-primary">
                                 <div class="card-header" style="background: #002f62">
-                                    <h2 class="card-title">Posible salario 2024</h2>
+                                    <h2 class="card-title">Posible salario 2025</h2>
                                 </div>
                                 <div class="card">
                                     <div class="card-body">
@@ -645,7 +645,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <div class="card-body" id="mostrarInfoPar" style="display: none;">
+                                    <div class="card-body" id="mostrarInfoPar" style="display: block;">
                                         <h4 class="efectoBlink" style="color: red; text-align: center; font-weight: 600;">
                                             ((( Importante )))
                                         </h4>
