--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Calcular Salario 2025</title>
+    <title>Calcular Salario 2026</title>
 
     <!-- Google Font: Source Sans Pro    -->
     <link rel="stylesheet"
@@ -85,7 +85,7 @@
             <a href="#" class="brand-link">
                 <img src="LogoPesos.png" alt="imagen de rawpixel.com - Freepic.es
                 " class="brand-image img-circle elevation-3" style="opacity: .8">
-                <span class="brand-text font-weight-light">Salario 2025</span>
+                <span class="brand-text font-weight-light">Salario 2026</span>
             </a>
             <div class="sidebar">
                 <nav class="mt-2">
@@ -125,11 +125,11 @@
                                     <h2 class="card-title">Bienvenido</h2>
                                 </div>
                                 <div class="card-body">
-                                    <h4 class="efectoBlink" style="color: #05bf2d; text-align: center;">((( Atención )))
+                                    <h4 class="efectoBlink" style="color: #05bf2d; text-align: center;">((( Atención - Actualizado a 2026 )))
                                     </h4>
                                     <p style="text-align: justify;"><b>Información importante: </b>Desde esta
                                         herramienta usted podrá calcular el
-                                        salario 2025 según el aumento
+                                        salario 2026 según el aumento
                                         que sea establecido por decreto por el gobierno nacional, así como visualizar el
                                         posible
                                         retroactivo a recibir y agregar otros descuentos o devengos adicionales que
@@ -139,8 +139,7 @@
                                         información aquí mostrada debe ser tomada solo como referencia y ha sido
                                         extraída
                                         de: Decreto No. 1212 de 1990, Decreto 1091 de 1995,
-                                        Decreto 4433 de 2004, Decreto 466 de 2023, Decreto 905 de 2024, Decreto 910 de
-                                        2024 y Decreto 0615 de 2025. Por lo
+                                        Decreto 4433 de 2004, Decreto 466 de 2023, Decreto 611 de 2025 y Decreto 0615 de 2025 (Pendientes decretos). Por lo
                                         anterior, los valores reales
                                         pueden variar dependiendo de cada persona y de los datos ingresados.</p>
                                 </div>
@@ -398,7 +397,7 @@
                         <div class="col-md-8 col-12">
                             <div class="card card-primary">
                                 <div class="card-header" style="background: #002f62">
-                                    <h2 class="card-title">Posible salario 2025</h2>
+                                    <h2 class="card-title">Posible salario 2026</h2>
                                 </div>
                                 <div class="card">
                                     <div class="card-body">
@@ -472,7 +471,7 @@
                                             </div>
                                             <div class="col-md- col-12" style="padding: 5px;">
                                                 <button class="btn btn-greenDark" style="width: 100%;"
-                                                    id="btnComparar">Comparar 2024-2025</button>
+                                                    id="btnComparar">Comparar 2025-2026</button>
                                             </div>
                                             <div class="col-md-6 col-12" style="padding: 5px;">
                                                 <button class="btn btn-primary" style="width: 100%;"
@@ -508,7 +507,7 @@
                         <div class="col-md-10 col-12 col-sm-12">
                             <div class="card card-primary">
                                 <div class="card-header" style="background: #002f62">
-                                    <h3 class="card-title">Comparación de salarios 2024 - 2025</h3>
+                                    <h3 class="card-title">Comparación de salarios 2025 - 2026</h3>
                                 </div>
                                 <div class="card">
                                     <div class="card-body" style="overflow-x: auto;">
@@ -521,8 +520,8 @@
                                                 </tr>
                                                 <tr>
                                                     <th style="width: 40%; text-align: left">Concepto</th>
-                                                    <th style="width: 20%; text-align: center">2024</th>
                                                     <th style="width: 20%; text-align: center">2025</th>
+                                                    <th style="width: 20%; text-align: center">2026</th>
                                                     <th style="width: 20%; text-align: center">Aumento</th>
                                                 </tr>
 
@@ -540,8 +539,8 @@
                                                 </tr>
                                                 <tr>
                                                     <th style="width: 40%; text-align: left">Concepto</th>
-                                                    <th style="width: 20%; text-align: center">2024</th>
                                                     <th style="width: 20%; text-align: center">2025</th>
+                                                    <th style="width: 20%; text-align: center">2026</th>
                                                     <th style="width: 20%; text-align: center">Aumento</th>
                                                 </tr>
                                             </thead>
@@ -558,8 +557,8 @@
                                                 </tr>
                                                 <tr>
                                                     <th style="width: 40%; text-align: left">Concepto</th>
-                                                    <th style="width: 20%; text-align: center">2024</th>
                                                     <th style="width: 20%; text-align: center">2025</th>
+                                                    <th style="width: 20%; text-align: center">2026</th>
                                                     <th style="width: 20%; text-align: center">Aumento</th>
                                                 </tr>
                                             </thead>
@@ -998,7 +997,7 @@
     <!-- AdminLTE App -->
     <script src="resources/dist/js/adminlte.js"></script>
     <script src="resources/plugins/sweetalert2/sweetalert2.all.min.js"></script>
-    <script src="CalculoValores.js?v=25"></script>
+    <script src="CalculoValores.js?v=1"></script>
 </body>
 
 </html>
