--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
                                     <h2 class="card-title">Bienvenido</h2>
                                 </div>
                                 <div class="card-body">
-                                    <h4 class="efectoBlink" style="color: #05bf2d; text-align: center;">((( Atención - Actualizado a 2026 )))
+                                    <h4 class="efectoBlink" style="color: #05bf2d; text-align: center;">((( Atención )))
+                                    <h4 class="efectoBlink" style="color: #05bf2d; text-align: center;">((( Actualizado a 2026 )))
+
                                     </h4>
                                     <p style="text-align: justify;"><b>Información importante: </b>Desde esta
                                         herramienta usted podrá calcular el
